added lombok to pom.xml, annotations on Character class

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,13 @@
     <properties>
         <java.version>11</java.version>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>LATEST</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
